--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -1,43 +1,272 @@
 <?xml version="1.0"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="en" datatype="plaintext" original="file.ext">
+  <file source-language="pl" datatype="plaintext" original="file.ext">
     <body>
+      <trans-unit id="label.title_main">
+        <source>label.title_main</source>
+        <target>Bug-Trackerr Lista Bugów</target>
+      </trans-unit>
+      <trans-unit id="label.title_main_category">
+        <source>label.title_main_category</source>
+        <target>Bug-Trackerr Lista Kategorii</target>
+      </trans-unit>
+      <trans-unit id="label.title_main_login">
+        <source>label.title_main_login</source>
+        <target>Zaloguj się!</target>
+      </trans-unit>
       <trans-unit id="label.actions">
         <source>label.actions</source>
-        <target>Actions</target>
+        <target>Akcje</target>
       </trans-unit>
       <trans-unit id="label.id">
         <source>label.id</source>
-        <target>Id</target>
+        <target>ID Buga</target>
+      </trans-unit>
+      <trans-unit id="label.id_category">
+        <source>label.id_category</source>
+        <target>ID Kategorii</target>
       </trans-unit>
       <trans-unit id="label.title">
         <source>label.title</source>
-        <target>Title</target>
+        <target>Tytuł</target>
+      </trans-unit>
+      <trans-unit id="label.reportedBy">
+        <source>label.reportedBy</source>
+        <target>Zgłoszone przez</target>
+      </trans-unit>
+      <trans-unit id="label.createdAt">
+        <source>label.createdAt</source>
+        <target>Dodane</target>
+      </trans-unit>
+        <trans-unit id="label.updatedAt">
+          <source>label.updatedAt</source>
+          <target>Zaaktualizowane</target>
+        </trans-unit>
+      <trans-unit id="label.currentStatus">
+        <source>label.currentStatus</source>
+        <target>Aktualny Status</target>
       </trans-unit>
       <trans-unit id="label.content">
         <source>label.content</source>
-        <target>Content</target>
+        <target>Zawartość</target>
       </trans-unit>
-      <trans-unit id="label.tags">
-        <source>label.tags</source>
-        <target>Tags</target>
+        <trans-unit id="label.category">
+          <source>label.category</source>
+          <target>Kategoria</target>
+        </trans-unit>
+        <trans-unit id="label.email">
+          <source>label.email</source>
+          <target>Email</target>
+        </trans-unit>
+      <trans-unit id="label.status">
+        <source>label.status</source>
+        <target>Status</target>
+      </trans-unit>
+      <trans-unit id="label.old_password">
+        <source>label.old_password</source>
+        <target>Stare Hasło</target>
+      </trans-unit>
+      <trans-unit id="label.new_password">
+        <source>label.new_password</source>
+        <target>Nowe Hasło</target>
+      </trans-unit>
+      <trans-unit id="label.category_not_found">
+        <source>label.category_not_found</source>
+        <target>Kategoria nie znaleziona!</target>
+      </trans-unit>
+      <trans-unit id="label.none">
+        <source>label.none</source>
+        <target>Puste</target>
+      </trans-unit>
+      <trans-unit id="label.welcome">
+        <source>label.welcome</source>
+        <target>Witamy!</target>
+      </trans-unit>
+      <trans-unit id="label.logged_info">
+        <source>label.logged_info</source>
+        <target>Jesteś zalogowany jako:</target>
+      </trans-unit>
+     <trans-unit id="label.email_login">
+        <source>label.email_login</source>
+        <target>Email</target>
+      </trans-unit>
+     <trans-unit id="label.password">
+        <source>label.password</source>
+        <target>Hasło</target>
+      </trans-unit>
+     <trans-unit id="label.create_category">
+        <source>label.create_category</source>
+        <target>Utwórz kategorię</target>
       </trans-unit>
       <trans-unit id="message.empty_list">
         <source>message.empty_list</source>
-        <target>List is empty.</target>
+        <target>Lista jest pusta.</target>
       </trans-unit>
       <trans-unit id="message.record_not_found">
         <source>message.record_not_found</source>
-        <target>Record not found.</target>
+        <target>Raport nie znaleziony.</target>
       </trans-unit>
-      <trans-unit id="title.record_list">
-        <source>title.record_list</source>
-        <target>Records list</target>
+      <trans-unit id="message.created_successfully">
+        <source>message.created_successfully</source>
+        <target>Dodano nowe zgłoszenie Buga.</target>
+      </trans-unit>
+      <trans-unit id="message.category_created_successfully">
+        <source>message.category_created_successfully</source>
+        <target>Dodano nową kategorię.</target>
+      </trans-unit>
+      <trans-unit id="message.edited_successfully">
+        <source>message.edited_successfully</source>
+        <target>Udało się zmodyfikować zgłoszenie.</target>
+      </trans-unit>
+      <trans-unit id="message.category_edited_successfully">
+        <source>message.category_edited_successfully</source>
+        <target>Udało się zmodyfikować kategorię.</target>
+      </trans-unit>
+      <trans-unit id="message.deleted_successfully">
+        <source>message.deleted_successfully</source>
+        <target>Usunięto zgłoszenie.</target>
+      </trans-unit>
+      <trans-unit id="message.category_deleted_successfully">
+        <source>message.category_deleted_successfully</source>
+        <target>Usunięto kategorię.</target>
+      </trans-unit>
+      <trans-unit id="message.form_error">
+        <source>message.form_error</source>
+        <target>Błąd formularza!</target>
+      </trans-unit>
+      <trans-unit id="message.category_contains_tasks">
+        <source>message.category_contains_tasks</source>
+        <target>Kategoria jest aktualnie w użyciu i nie może zostać usunięta!</target>
+      </trans-unit>
+      <trans-unit id="message.email_changed">
+        <source>message.email_changed</source>
+        <target>Zmieniono Email!</target>
+      </trans-unit>
+      <trans-unit id="message.password_changed">
+        <source>message.password_changed</source>
+        <target>Zmieniono hasło!</target>
+      </trans-unit>
+     <trans-unit id="message.password_incorrect">
+        <source>message.password_incorrect</source>
+        <target>Niepoprawne hasło! Spróbuj ponownie.</target>
+      </trans-unit>
+      <trans-unit id="title.bug_list">
+        <source>title.bug_list</source>
+        <target>Lista Bugów</target>
+      </trans-unit>
+      <trans-unit id="title.category_list">
+        <source>title.category_list</source>
+        <target>Lista Kategorii</target>
+      </trans-unit>
+      <trans-unit id="title.bug_details">
+        <source>title.bug_details</source>
+        <target>Szczegóły Zgłoszenia</target>
+      </trans-unit>
+      <trans-unit id="title.category_details">
+        <source>title.category_details</source>
+        <target>Szczegóły Kategorii</target>
       </trans-unit>
       <trans-unit id="title.record_view">
         <source>title.record_view</source>
-        <target>Record view #%id%</target>
+        <target>Widok Zgłoszeń</target>
       </trans-unit>
+      <trans-unit id="title.record_list">
+        <source>title.record_list</source>
+        <target>Lista Bugów</target>
+      </trans-unit>
+      <trans-unit id="title.change_info">
+        <source>title.change_info</source>
+        <target>Zmień Dane</target>
+      </trans-unit>
+      <trans-unit id="title.change_password">
+        <source>title.change_password</source>
+        <target>Zmień Hasło</target>
+      </trans-unit>
+      <trans-unit id="action.title.category_list">
+        <source>action.title.category_list</source>
+        <target>Lista Kategorii</target>
+      </trans-unit>
+      <trans-unit id="title.please_sign_in">
+        <source>title.please_sign_in</source>
+        <target>Prosze się zalogować:</target>
+      </trans-unit>
+        <trans-unit id="action.report_new_bug">
+          <source>action.report_new_bug</source>
+          <target>Zgłoś Nowy Błąd</target>
+        </trans-unit>
+        <trans-unit id="action.reset_filters">
+          <source>action.reset_filters</source>
+          <target>Resetuj Filtry</target>
+        </trans-unit>
+      <trans-unit id="action.title.bug_list">
+        <source>action.title.bug_list</source>
+        <target>Lista Bugów</target>
+      </trans-unit>
+        <trans-unit id="action.create_category">
+          <source>action.create_category</source>
+          <target>Dodaj Nową Kategorię</target>
+        </trans-unit>
+        <trans-unit id="action.details">
+          <source>action.details</source>
+          <target>Szczegóły</target>
+        </trans-unit>
+        <trans-unit id="action.edit">
+          <source>action.edit</source>
+          <target>Edytuj</target>
+        </trans-unit>
+        <trans-unit id="action.save">
+          <source>action.save</source>
+          <target>Zapisz Zmiany</target>
+        </trans-unit>
+        <trans-unit id="action.delete">
+          <source>action.delete</source>
+          <target>Usuń</target>
+        </trans-unit>
+        <trans-unit id="action.change_info">
+          <source>action.change_info</source>
+          <target>Zapisz Zmiany</target>
+        </trans-unit>
+        <trans-unit id="action.change_password">
+          <source>action.change_password</source>
+          <target>Zaakceptuj Zmiany</target>
+        </trans-unit>
+        <trans-unit id="action.main_site">
+          <source>action.main_site</source>
+          <target>Strona Główna</target>
+        </trans-unit>
+        <trans-unit id="action.sign_in">
+          <source>action.sign_in</source>
+          <target>Zaloguj się</target>
+        </trans-unit>
+        <trans-unit id="action.sign_out">
+          <source>action.sign_out</source>
+          <target>Wyloguj się</target>
+        </trans-unit>
+       <trans-unit id="label.edit_bug">
+          <source>label.edit_bug</source>
+          <target>Edytuj Zgłoszenie Buga</target>
+        </trans-unit>
+       <trans-unit id="label.create_bug">
+          <source>label.create_bug</source>
+          <target>Dodaj Nowe Zgłoszenie</target>
+        </trans-unit>
+       <trans-unit id="label.delete_bug">
+          <source>label.delete_bug</source>
+          <target>Usuń Zgłoszenie</target>
+        </trans-unit>
+       <trans-unit id="label.delete_category">
+          <source>label.delete_category</source>
+          <target>Usuń Kategorię</target>
+        </trans-unit>
+       <trans-unit id="label.edit_category">
+          <source>label.edit_category</source>
+          <target>Edytuj Kategorię</target>
+        </trans-unit>
+       <trans-unit id="action.return">
+          <source>action.return</source>
+          <target>Powrót</target>
+        </trans-unit>
+
     </body>
   </file>
 </xliff>
