--Cleaned every unnecessary file, --Updated entities based on my database, --Fixed few bugs, --*overall the project is mostly finished, but still does require quite a bit of work and polishing, but other than that it is perfectly fine to be used :)

--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -108,7 +108,7 @@
       </trans-unit>
       <trans-unit id="message.created_successfully">
         <source>message.created_successfully</source>
-        <target>Dodano nowe zgłoszenie Buga.</target>
+        <target>Dodano nowe zgłoszenie.</target>
       </trans-unit>
       <trans-unit id="message.category_created_successfully">
         <source>message.category_created_successfully</source>
