--Fixed every issue that came up when using php-cs fixer, --Small adjustments, --The most stable version of them all, at last

--- a/app/translations/messages.en.xlf
+++ b/app/translations/messages.en.xlf
@@ -84,7 +84,7 @@
       </trans-unit>
       <trans-unit id="label.logged_info">
         <source>label.logged_info</source>
-        <target>You are logged in as:</target>
+        <target>You are logged as:</target>
       </trans-unit>
      <trans-unit id="label.create_category">
         <source>label.create_category</source>
